cluster/gitops/security/vaultwarden/metrics/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden-metrics
specs:
  - description: vaultwarden
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: vaultwarden-metrics
        app.kubernetes.io/instance: vaultwarden-metrics
        app.kubernetes.io/component: vaultwarden-metrics
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      # Backing CNPG cluster
      - toEndpoints:
          - matchLabels:
              cnpg.io/cluster: vaultwarden-postgres
        toPorts:
          - ports:
              - port: postgresql
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "3040"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "3040"
                protocol: TCP
